Fix Swagger docs
